# the-tome-of-shopping

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: config.rs  errors.rs  extractors.rs  lib.rs  main.rs  repositories.rs  state.rs
api/src/controllers/: shopping_list.rs
api/src/handlers/: shopping.rs
api/src/routes/: mod.rs  shopping.rs
cli/: Cargo.toml
cli/src/: credentials.rs  lib.rs  main.rs
cli/src/api/: api_client.rs  client.rs  email_client.rs  mod.rs
cli/src/commands/: cli.rs  handler.rs  mod.rs  pages.rs  shopping.rs
cli/src/executor/: async_executor.rs  mod.rs
cli/src/interface/: mod.rs  repl.rs
shared/: Cargo.toml
shared/src/: email.rs  error.rs  item.rs  lib.rs  page.rs  repository.rs  test_repo.rs  user.rs
