[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared"}
axum = { version = "0.8.8", features = ["tracing"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
async-trait = "0.1.89"
anyhow = "1.0.102"
rust_decimal = { version = "1.41.0", features = ["macros", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower-http = { version = "0.6.8", features = ["timeout", "trace"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
fs2 = "0.4.3"

[dev-dependencies]
tempfile = "3.27.0"
