[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared"}
anyhow = "1.0.102"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.51.0", features = ["full"] }
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
rust_decimal = { version = "1.41.0", features = ["serde", "macros"] }
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
httpmock = "0.8.3"
